[gd_scene load_steps=15 format=1]

[ext_resource path="res://Texture/battle_screen/battle_hud/commands/mare.tex" type="Texture" id=1]
[ext_resource path="res://Scripts/playing.gd" type="Script" id=2]
[ext_resource path="res://Scripts/spawning.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Sample/220207__gameaudio__boot-sound.smp" type="Sample" id=4]
[ext_resource path="res://Sounds/Sample/220208__gameaudio__click-pop-two-part.smp" type="Sample" id=5]
[ext_resource path="res://Scenes/scrollSong.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fonts/numeroni.fnt" type="BitmapFont" id=7]
[ext_resource path="res://Sounds/Music/[No Copyright Music] Ukulele Bells - HookSounds_1.opus" type="AudioStream" id=8]
[ext_resource path="res://Texture/battle_screen/battle_hud/commands/alga.tex" type="Texture" id=9]
[ext_resource path="res://Texture/battle_screen/battle_hud/commands/pesce.tex" type="Texture" id=10]
[ext_resource path="res://Texture/battle_screen/battle_hud/commands/perla.tex" type="Texture" id=11]
[ext_resource path="res://Texture/battle_screen/battle_hud/commands/stella.tex" type="Texture" id=12]
[ext_resource path="res://Texture/battle_screen/battle_hud/commands/shell.tex" type="Texture" id=13]

[sub_resource type="SampleLibrary" id=1]

samples/220207__gameaudio__boot-sound = { "db":0.0, "pitch":1.0, "sample":ExtResource( 4 ) }
samples/220208__gameaudio__click-pop-two-part = { "db":10.0, "pitch":1.0, "sample":ExtResource( 5 ) }

[node name="Panel" type="TextureFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 0.0
margin/right = 723.0
margin/bottom = 1280.0
texture = ExtResource( 1 )
stretch_mode = 0
script/script = ExtResource( 2 )

[node name="Spawn" type="Node2D" parent="."]

transform/pos = Vector2( 200, 0 )
script/script = ExtResource( 3 )

[node name="tempo" type="Timer" parent="Spawn"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Viewport" type="Viewport" parent="."]

rect = Rect2( 0, 0, 720, 1280 )
own_world = false
world = null
transparent_bg = true
render_target/enabled = false
render_target/v_flip = false
render_target/clear_on_new_frame = false
render_target/filter = false
render_target/gen_mipmaps = false
render_target/update_mode = 2
audio_listener/enable_2d = false
audio_listener/enable_3d = false
physics/object_picking = false
gui/disable_input = false

[node name="playerone" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="sparaNote" parent="." instance=ExtResource( 6 )]

[node name="tabellone" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 602.0
margin/top = 196.0
margin/right = 702.0
margin/bottom = 296.0
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0.917969, 0.905474, 0.118332, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="musichetta" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="alga" type="TouchScreenButton" parent="." groups=[ "4verde" ]]

transform/pos = Vector2( 490, 1180 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 9 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="pesce" type="TouchScreenButton" parent="." groups=[ "0blu" ]]

transform/pos = Vector2( 23, 1090 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 10 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="perla" type="TouchScreenButton" parent="." groups=[ "3viola" ]]

transform/pos = Vector2( 520, 1080 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 11 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="stella" type="TouchScreenButton" parent="." groups=[ "1rosso" ]]

transform/pos = Vector2( 125, 1088.15 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 12 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="conchiglia" type="TouchScreenButton" parent="." groups=[ "2giallo" ]]

transform/pos = Vector2( 140, 1180 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 13 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="attack_time" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="killsNavi" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 196.0
margin/right = 120.0
margin/bottom = 296.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[connection signal="timeout" from="Spawn/tempo" to="." method="_on_tempo_timeout"]

[connection signal="pressed" from="alga" to="." method="_on_alga_pressed"]

[connection signal="pressed" from="pesce" to="." method="_on_pesce_pressed"]

[connection signal="pressed" from="perla" to="." method="_on_perla_pressed"]

[connection signal="pressed" from="stella" to="." method="_on_stella_pressed"]

[connection signal="pressed" from="conchiglia" to="." method="_on_conchiglia_pressed"]

[connection signal="timeout" from="attack_time" to="." method="_on_attack_time_timeout"]


